[gd_scene load_steps=8 format=3 uid="uid://c3hubf4f08kio"]

[ext_resource type="Script" path="res://scripts/dialogue_ui.gd" id="1_7svvp"]
[ext_resource type="Script" path="res://scripts/dialogue_node.gd" id="1_d3gm8"]
[ext_resource type="Texture2D" uid="uid://chdrlobpych6f" path="res://sprites/sad.png" id="3_1sqnp"]
[ext_resource type="Texture2D" uid="uid://bbgo1yviu4gnh" path="res://icon.svg" id="3_htknp"]
[ext_resource type="Texture2D" uid="uid://b8x4m4j14k8th" path="res://sprites/smile.png" id="4_fbmgl"]
[ext_resource type="Script" path="res://scripts/choice_node.gd" id="5_wpvvt"]
[ext_resource type="PackedScene" uid="uid://dqadkyv42pg4w" path="res://scenes/choices_window.tscn" id="7_eg0ob"]

[node name="DialogueUI" type="CanvasLayer"]
script = ExtResource("1_7svvp")
_text_speed = 0.01

[node name="DialogueManager" type="Node" parent="."]

[node name="DialogueNode" type="Node" parent="DialogueManager"]
script = ExtResource("1_d3gm8")
_content = Array[String](["coucouuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuu", "recoucou"])
_sprites = Array[Texture2D]([ExtResource("3_1sqnp"), ExtResource("4_fbmgl")])
_speaker = "Aigis"

[node name="DialogueNode2" type="Node" parent="DialogueManager"]
script = ExtResource("1_d3gm8")
_content = Array[String](["c'est le deuxieme dialogue"])
_sprites = Array[Texture2D]([ExtResource("3_1sqnp")])
_speaker = "salam"

[node name="ChoiceNode" type="Node" parent="DialogueManager"]
script = ExtResource("5_wpvvt")
_choices = Array[String](["choix 1", "8 sides"])
_content = Array[String](["on choisit quoi stp"])
_sprites = Array[Texture2D]([ExtResource("3_1sqnp")])

[node name="choice1" type="Node" parent="DialogueManager/ChoiceNode"]

[node name="DialogueNode" type="Node" parent="DialogueManager/ChoiceNode/choice1"]
script = ExtResource("1_d3gm8")
_content = Array[String](["pk la choix 1 stp"])
_sprites = Array[Texture2D]([ExtResource("3_1sqnp")])

[node name="choice2" type="Node" parent="DialogueManager/ChoiceNode"]

[node name="DialogueNode" type="Node" parent="DialogueManager/ChoiceNode/choice2"]
script = ExtResource("1_d3gm8")
_content = Array[String](["an octogon is a polygon with 8 sides :))))"])
_sprites = Array[Texture2D]([ExtResource("4_fbmgl")])

[node name="ChoiceNode" type="Node" parent="DialogueManager/ChoiceNode/choice2"]
script = ExtResource("5_wpvvt")
_choices = Array[String](["oui", "non"])
_content = Array[String](["vraiment ?"])
_sprites = Array[Texture2D]([ExtResource("4_fbmgl")])
_speaker = "moi"

[node name="choice1" type="Node" parent="DialogueManager/ChoiceNode/choice2/ChoiceNode"]

[node name="DialogueNode" type="Node" parent="DialogueManager/ChoiceNode/choice2/ChoiceNode/choice1"]
script = ExtResource("1_d3gm8")
_content = Array[String](["cool :)"])
_sprites = Array[Texture2D]([ExtResource("4_fbmgl")])
_speaker = "moi2"

[node name="choice2" type="Node" parent="DialogueManager/ChoiceNode/choice2/ChoiceNode"]

[node name="DialogueNode" type="Node" parent="DialogueManager/ChoiceNode/choice2/ChoiceNode/choice2"]
script = ExtResource("1_d3gm8")
_content = Array[String](["oh :("])
_sprites = Array[Texture2D]([ExtResource("3_1sqnp")])
_speaker = "oh :((("

[node name="DialogueNode2" type="Node" parent="DialogueManager/ChoiceNode/choice2"]
script = ExtResource("1_d3gm8")
_content = Array[String](["a deux doigts de rater les maths", "c'est pr Ã§a j'ai mis 12 en probas"])
_sprites = Array[Texture2D]([ExtResource("3_1sqnp"), ExtResource("4_fbmgl")])
_speaker = "stiker"

[node name="DialogueNode3" type="Node" parent="DialogueManager"]
script = ExtResource("1_d3gm8")
_content = Array[String](["anyway bisou bisou"])
_sprites = Array[Texture2D]([ExtResource("4_fbmgl")])
_speaker = "kaito mon bb"

[node name="TextureRect" type="TextureRect" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -64.0
offset_top = -128.0
offset_right = 64.0
grow_horizontal = 2
grow_vertical = 0
texture = ExtResource("3_htknp")

[node name="TextWindow" type="Control" parent="."]
layout_mode = 3
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -40.0
offset_right = 20.0
grow_horizontal = 2
grow_vertical = 0

[node name="TextBG" type="ColorRect" parent="TextWindow"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -551.0
offset_top = -185.0
offset_right = 548.0
offset_bottom = -52.0
grow_horizontal = 2
grow_vertical = 0
size_flags_vertical = 8
color = Color(0, 0, 0, 0.27451)

[node name="SpeakerBG" type="ColorRect" parent="TextWindow"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -514.0
offset_top = -227.0
offset_right = -181.0
offset_bottom = -175.0
grow_horizontal = 2
grow_vertical = 0
color = Color(0, 0, 0, 0.490196)

[node name="RichTextLabel" type="RichTextLabel" parent="TextWindow"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -353.0
offset_top = -172.0
offset_right = 359.0
offset_bottom = -53.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/normal_font_size = 35
text = "But this is my first time meeting another Ultimate student."

[node name="SpeakerLabel" type="RichTextLabel" parent="TextWindow"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -494.0
offset_top = -225.0
offset_right = -206.0
offset_bottom = -181.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/normal_font_size = 30
text = "Maki Harukawa"

[node name="ChoicesWindow" parent="." instance=ExtResource("7_eg0ob")]
offset_left = 87.0
offset_top = -371.0
offset_right = 587.0
offset_bottom = -198.0
